# VirtualFriends

./: README.md  setup.cfg
src/nonebot_plugin_vf.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/nonebot_plugin_vf_SnowyKami.egg-info/: PKG-INFO  SOURCES.txt
src/vf_package/: __init__.py  api.py
src/vf_package/resource/: vf_data.json
