[metadata]
name = nonebot-plugin-vf
version = 0.0.1
author = SnowyKami
author_email = snowykami@outlook.com
description = Nonebot2 plugin
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/snowyfirefly/VirtualFriends
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src